--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,23 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
-@import 'tailwindcss/utilities'; 
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+@import 'tailwindcss/utilities';
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Kanit', sans-serif ;
+  font-family: 'Noto Sans Thai', sans-serif;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+nav img{
+  height: 60px;
+
+}
