--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ nav img{
 .news_img{
   overflow: hidden;
 }
-.loader{
+/* .loader{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,4 +36,4 @@ nav img{
   background-color: aquamarine;
   color: aliceblue;
   transition: 0.5s;
-}
+} */
