--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,9 +38,12 @@ a {
   position: relative;
   justify-content: center;
   align-items: center;
-  background-color: aliceblue;
-  height: 100vh;
-  z-index:100;
+  position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
 }
 .loader:before, .loader:after {
   content: "";
