--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   padding: 0%;
   margin: 0%;
   font-family: 'Noto Sans Thai', sans-serif !important;
+  
 }
 
 a {
@@ -30,7 +31,6 @@ a {
   width: 2.5em;
   height: 2.5em;
   transform: rotate(165deg);
-
 }
 
 .loader_bg{
@@ -39,11 +39,12 @@ a {
   justify-content: center;
   align-items: center;
   position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: white;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: white;
+  z-index: 99;
 }
 .loader:before, .loader:after {
   content: "";
